--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "keypair",
     "message"
   ],
-    "author": "Aryamanraj <aryaman0816@gmail.com>",
+    "author": "Aryaman Raj <aryaman0816@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
