feat: rename package to 'solsigner' for npm availability
- Change package name from 'sol-sign' to 'solsigner'
- Update binary command from 'sol-sign' to 'solsigner'
- Update all CLI branding and help text
- Update README documentation with new command examples
- Resolve npm naming conflict with existing 'solsign' package

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sol-sign",
+  "name": "solsigner",
   "version": "1.0.0",
   "description": "A CLI tool for signing messages with Solana keypairs",
   "main": "dist/index.js",
   "bin": {
-    "sol-sign": "dist/cli.js"
+    "solsigner": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc",
