feat: rename package to 'js-sol-sign' for better npm availability
- Change package name from 'solsigner' to 'js-sol-sign'
- Update binary command to 'js-sol-sign'
- Update all CLI branding to 'JS-Sol-Sign'
- Update README documentation with new command examples
- Clear indication this is a JavaScript/Node.js tool for Solana

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "solsigner",
+  "name": "js-sol-sign",
   "version": "1.0.0",
   "description": "A CLI tool for signing messages with Solana keypairs",
   "main": "dist/index.js",
   "bin": {
-    "solsigner": "dist/cli.js"
+    "js-sol-sign": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc",
