--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
+    "release": "npm run build && npm run test && npm run lint",
+    "version": "npm run build",
     "prepublishOnly": "npm run build",
     "prepare": "npm run build"
   },
