--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,9 +97,17 @@ jobs:
       if: steps.check.outputs.should_release == 'true'
       id: version_type
       run: |
-        # Get commits since last tag
-        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-        COMMITS=$(git log ${LAST_TAG}..HEAD --oneline)
+        # Get commits since last tag or from beginning if no tags exist
+        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+        
+        if [ -z "$LAST_TAG" ]; then
+          echo "No previous tags found, analyzing all commits"
+          COMMITS=$(git log --oneline)
+          LAST_TAG="(initial)"
+        else
+          echo "Last tag found: $LAST_TAG"
+          COMMITS=$(git log ${LAST_TAG}..HEAD --oneline)
+        fi
         
         echo "Commits since $LAST_TAG:"
         echo "$COMMITS"
@@ -144,8 +152,16 @@ jobs:
         echo "### Changes" >> temp_changelog.md
         
         # Get commits since last tag for changelog
-        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-        git log ${LAST_TAG}..HEAD --oneline --pretty=format:"- %s" >> temp_changelog.md
+        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+        
+        if [ -z "$LAST_TAG" ]; then
+          echo "Generating changelog from all commits"
+          git log --oneline --pretty=format:"- %s" >> temp_changelog.md
+        else
+          echo "Generating changelog from commits since $LAST_TAG"
+          git log ${LAST_TAG}..HEAD --oneline --pretty=format:"- %s" >> temp_changelog.md
+        fi
+        
         echo "" >> temp_changelog.md
         echo "" >> temp_changelog.md
         
