--- a/package.json
+++ b/package.json
@@ -48,20 +48,21 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.95.2",
-    "commander": "^11.1.0",
+    "bs58": "^6.0.0",
     "chalk": "^4.1.2",
+    "commander": "^11.1.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.12",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2",
-    "prettier": "^3.2.5"
+    "typescript": "^5.4.2"
   }
 }
